2006-03-28 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* doc/sdccman.lyx: added paragraph "Use of SDCC in Education"
	* src/mcs51/peeph.def: disabled rule 132.e fixing bug #1453093

2006-03-23 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/z80/gen.c (genFunction, genEndFunction): fixed bug 1160666,
	  implemented patch 1120823 Thanks to Willy De la Court (normal
	  interrupts need an interrupt number now if they are made critical),
	  and enabled nesting of critical functions though not for gbz80
	  (genCritical, genEndCritical): added functions
	  (genZ80Code): added cases for CRITICAL and ENDCRITICAL
	* src/z80/mappings.i: added "ei" to all mappings

2006-03-20 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* sim/ucsim/cmd.src/newcmdcl.h: applied patch fixing GCC 4.1 build
	submitted by the Debian SDCC maintainer Aurelien Jarno:
	"Credits goes to Martin Michlmayr, who rebuilt the whole Debian
	archive with gcc 4.1 on mips and wrote the patch"

2006-03-16 Raphael Neider <rneider AT web.de>

	* src/pic16/genarith.c (genAddLit): simplified and fixed case where
	  the left operand is shorter than the result (c* = lit-c* + int),
	  fixes bug #1450796
	* src/pic16/gen.c (genRightShift): check IS_SYMOP before accessing
	  OP_SYMBOL

2006-03-14 Vangelis Rokas <vrokas AT users.sourceforge.net>

	* src/.version: increased version number to 2.5.5
	* src/SDCCmain.c (linkEdit): do not test for PIC16 target since, PIC16
	linking is done manually in pic16 port's _linkEdit,
	* src/SDCCsymt.c (compStructSize): for target PIC16 and shell variable
	PIC16_PACKED_BITFIELDS, compact bitfield structures as much as possible,
	* src/pic16/gen.c (aopForSym): when direct register name is WREG then
	allocate asmop as AOP_ACC,
	(aopForRemat): added parameter 'bool result' in function declaration,
	(pic16_aopGet): return AOP_ACC when accessing WREG,
	(pic16_popGetTempReg): minor modification,
	(pic16_popRegFromIdx): first try with 'pic16_regWithIdx' then with